--- a/hokaidovietnam_fontend_client/src/Components/CategoryTab/styles.scss
+++ b/hokaidovietnam_fontend_client/src/Components/CategoryTab/styles.scss
@@ -7,8 +7,9 @@
 
     &-menu {
         display: flex;
-        justify-content: space-between;
         align-items: center;
+        flex-wrap: wrap;
+        padding-right: 20px;
 
         &Item {
             margin-right: 24px;
@@ -27,5 +28,6 @@
         color: #777171;
         font-size: 16px;
         font-weight: 500;
+        min-width: 100px
     }
 }
