--- a/hokaidovietnam_fontend_client/src/Components/ImageGallery/styles.scss
+++ b/hokaidovietnam_fontend_client/src/Components/ImageGallery/styles.scss
@@ -84,10 +84,9 @@
 }
 
 .imageGallery__buttons {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 0.6rem;
-    align-items: center;
+    display: flex;
+    width: 100%;
+    justify-content: center;
 }
 
 .imageGallery__button {
