--- a/hokaidovietnam_fontend_client/src/Components/SideBarAdmin/styles.scss
+++ b/hokaidovietnam_fontend_client/src/Components/SideBarAdmin/styles.scss
@@ -1,7 +1,8 @@
 .sidebar-admin {
     left: 0;
     position: absolute;
-    height: calc(100vh - 120px);
+    min-height: calc(100vh - 120px);
+    height: 100%;
     background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(210, 210, 210, 1) 100%);
     width: 230px;
     max-width: 230px;
