--- a/hokaidovietnam_fontend_client/src/Components/ImageGallery/styles.scss
+++ b/hokaidovietnam_fontend_client/src/Components/ImageGallery/styles.scss
@@ -32,6 +32,44 @@
     }
 }
 
+@media screen and (max-width: 768px) {
+
+
+    // Carousel responsive
+    .imageGallery {
+        max-width: 80%;
+        height: 40vh;
+
+        img {
+            height: 40vh;
+            max-width: 100%;
+            object-fit: cover;
+        }
+    }
+
+    .imageGallery__slide {
+        max-height: 40vh;
+    }
+
+    .imageGallery__button {
+        display: none !important;
+    }
+
+    .imageGallery.imageGallery_detail {
+        max-width: 90%;
+        height: calc(60vh + 250px);
+
+        .imageGallery__slide {
+            max-height: 60vh !important;
+
+            img {
+                height: 60vh;
+            }
+        }
+
+    }
+}
+
 .imageGallery-thumbs {
     --thumbs-slide-spacing: 10px;
     --thumbs-slide-height: 180px;
