--- a/src/Components/Quantity/css/styles.css
+++ b/src/Components/Quantity/css/styles.css
@@ -7,6 +7,34 @@
   max-width: 160px;
   min-width: 160px;
 }
+.quantity-input_full {
+  max-width: 100%;
+  min-width: 100%;
+}
+.quantity-input_mobile {
+  max-width: 100px;
+  min-width: 100px;
+}
+.quantity-input_mobile .quantity-input__screen {
+  width: 100%;
+  font-size: 12px;
+  padding: 6px;
+  height: 30px !important;
+  max-height: 30px !important;
+}
+.quantity-input_mobile .quantity-input__modifier {
+  width: 42px;
+  font-size: 12px;
+  cursor: pointer;
+}
+.quantity-input_mobile .quantity-input__modifier--left {
+  height: 30px;
+  width: 30px;
+}
+.quantity-input_mobile .quantity-input__modifier--right {
+  height: 30px;
+  width: 30px;
+}
 
 .quantity-input__modifier,
 .quantity-input__screen {
