feat: add responsive index metric

--- a/src/Components/Metrics/MetricCard/styles.scss
+++ b/src/Components/Metrics/MetricCard/styles.scss
@@ -25,3 +25,51 @@
         font-weight: 600;
     }
 }
+
+@media screen and (max-width: 992px) {
+    .metric-wrapper {
+        width: 50% !important;
+        justify-content: flex-start;
+        margin-top: 10px;
+        margin-bottom: 10px;
+
+        &-icon {
+            margin-right: 30px;
+            color: #1E537C;
+            font-size: 30px;
+        }
+
+        &-label {
+            font-size: 12px;
+            margin-bottom: 8px;
+        }
+
+        &-index {
+            font-size: 18px;
+        }
+    }
+}
+
+
+@media screen and (max-width: 552px) {
+    .metric-wrapper {
+        width: 100% !important;
+        justify-content: flex-start;
+
+        &-icon {
+            margin-right: 20px;
+            color: #1E537C;
+            font-size: 30px;
+        }
+
+        &-label {
+            font-size: 12px;
+            margin-bottom: 4px;
+
+        }
+
+        &-index {
+            font-size: 18px;
+        }
+    }
+}
